--- a/addons-own/fso_base_website/static/src/css/snippets.css
+++ b/addons-own/fso_base_website/static/src/css/snippets.css
@@ -4,7 +4,9 @@
 /* Edit-mode-only indicator */
 #wrap.oe_editable .snippet_structure_group {
     min-height: 100px;
-    border: 3px hotpink dotted;
+    border: 3px hotpink dashed;
+    margin: 4px 5px;
+    padding: 5px 4px;
     /*margin-top: 40px;*/
     /*margin-bottom: 1px;*/
 }
